# DNS-Recursive-Resolver

./: CMakeLists.txt  README.md
src/: cache.cpp  cache.h  cache_client.cpp  cache_client.h  cache_daemon_main.cpp  cachectl.cpp  dns_wire.cpp  dns_wire.h  main.cpp  resolver.cpp  resolver.h  transport.cpp  transport.h  transport_tls.cpp  transport_tls.h
tests/: Makefile.test  README.md  run_all_tests.sh  test_cache.sh  test_cases.md  test_dot.sh  test_integration.sh  test_quality.sh  test_recursive_iterative.sh
